SERVER-25981 fix race in log component settings