src/mongo/logger/log_component_settings.cpp
@@ -35,42 +35,61 @@ namespace mongo {
 namespace logger {
 
 LogComponentSettings::LogComponentSettings() {
-    _minimumLoggedSeverity[LogComponent::kDefault] = LogSeverity::Log().toInt();
+    _minimumLoggedSeverity[LogComponent::kDefault].store(LogSeverity::Log().toInt());
 
     for (int i = 0; i < int(LogComponent::kNumLogComponents); ++i) {
-        _minimumLoggedSeverity[i] = _minimumLoggedSeverity[LogComponent::kDefault];
-        _hasMinimumLoggedSeverity[i] = false;
+        _minimumLoggedSeverity[i].store(_minimumLoggedSeverity[LogComponent::kDefault].load());
+        _hasMinimumLoggedSeverity[i].store(false);
     }
 
-    _hasMinimumLoggedSeverity[LogComponent::kDefault] = true;
+    _hasMinimumLoggedSeverity[LogComponent::kDefault].store(true);
 }
 
 LogComponentSettings::~LogComponentSettings() {}
 
 bool LogComponentSettings::hasMinimumLogSeverity(LogComponent component) const {
     dassert(int(component) >= 0 && int(component) < LogComponent::kNumLogComponents);
-    return _hasMinimumLoggedSeverity[component];
+    return _hasMinimumLoggedSeverity[component].load();
 }
 
 LogSeverity LogComponentSettings::getMinimumLogSeverity(LogComponent component) const {
     dassert(int(component) >= 0 && int(component) < LogComponent::kNumLogComponents);
-    return LogSeverity::cast(_minimumLoggedSeverity[component]);
+    return LogSeverity::cast(_minimumLoggedSeverity[component].load());
 }
 
 void LogComponentSettings::setMinimumLoggedSeverity(LogComponent component, LogSeverity severity) {
     dassert(int(component) >= 0 && int(component) < LogComponent::kNumLogComponents);
-    _minimumLoggedSeverity[component] = severity.toInt();
-    _hasMinimumLoggedSeverity[component] = true;
+    stdx::lock_guard<stdx::mutex> lk(_mtx);
+    _setMinimumLoggedSeverityInLock(component, severity);
+}
+
+void LogComponentSettings::_setMinimumLoggedSeverityInLock(LogComponent component,
+                                                           LogSeverity severity) {
+    _minimumLoggedSeverity[component].store(severity.toInt());
+    _hasMinimumLoggedSeverity[component].store(true);
 
     // Every unconfigured component will inherit log severity from parent.
     // Traversing the severity array once works because child components always
     // come after the parent in the LogComponent::Value enumeration.
     for (int i = 0; i < int(LogComponent::kNumLogComponents); ++i) {
-        if (!_hasMinimumLoggedSeverity[i]) {
+        if (!_hasMinimumLoggedSeverity[i].load()) {
             LogComponent::Value v = LogComponent::Value(i);
             LogComponent parentComponent = LogComponent(v).parent();
             LogSeverity parentSeverity = getMinimumLogSeverity(parentComponent);
-            _minimumLoggedSeverity[i] = parentSeverity.toInt();
+            _minimumLoggedSeverity[i].store(parentSeverity.toInt());
+        }
+    }
+
+    if (kDebugBuild) {
+        // This loop validates the guarantee that either an element has an individual log severity
+        // set or that it's value is equal to its parent's (i.e. either the value is set or
+        // inherited).
+        for (int i = 0; i < int(LogComponent::kNumLogComponents); ++i) {
+            LogComponent::Value v = LogComponent::Value(i);
+            LogComponent parentComponent = LogComponent(v).parent();
+            invariant(_hasMinimumLoggedSeverity[i].load() ||
+                      _minimumLoggedSeverity[i].load() ==
+                          _minimumLoggedSeverity[parentComponent].load());
         }
     }
 }
@@ -78,26 +97,22 @@ void LogComponentSettings::setMinimumLoggedSeverity(LogComponent component, LogS
 void LogComponentSettings::clearMinimumLoggedSeverity(LogComponent component) {
     dassert(int(component) >= 0 && int(component) < LogComponent::kNumLogComponents);
 
+    stdx::lock_guard<stdx::mutex> lk(_mtx);
+
     // LogComponent::kDefault must always be configured.
     if (component == LogComponent::kDefault) {
-        setMinimumLoggedSeverity(component, LogSeverity::Log());
+        _setMinimumLoggedSeverityInLock(component, LogSeverity::Log());
         return;
     }
 
     // Set unconfigured severity level to match LogComponent::kDefault.
-    setMinimumLoggedSeverity(component, getMinimumLogSeverity(component.parent()));
-    _hasMinimumLoggedSeverity[component] = false;
+    _setMinimumLoggedSeverityInLock(component, getMinimumLogSeverity(component.parent()));
+    _hasMinimumLoggedSeverity[component].store(false);
 }
 
 bool LogComponentSettings::shouldLog(LogComponent component, LogSeverity severity) const {
     dassert(int(component) >= 0 && int(component) < LogComponent::kNumLogComponents);
-
-    // Should match parent component if minimum severity level is not configured for
-    // component.
-    dassert(_hasMinimumLoggedSeverity[component] ||
-            _minimumLoggedSeverity[component] == _minimumLoggedSeverity[component.parent()]);
-
-    return severity >= LogSeverity::cast(_minimumLoggedSeverity[component]);
+    return severity >= LogSeverity::cast(_minimumLoggedSeverity[component].loadRelaxed());
 }
 
 }  // logger
